package dataControllerUtils.protobuf;

message Header {
extensions 2 to 102;
    enum MESSAGE_TYPE {
        DOMAIN_QUERY = 0;
        TIMEBASED_QUERY = 1;
        TIMEBASED_SUBSCRIPTION = 2;
        RESPONSE = 3;
        DOMAIN_DATA = 4;
        TIMEBASED_ARCHIVE_DATA = 5;
        TIMEBASED_PUBSUB_DATA = 6;
        SESSION_QUERY = 7;
        SESSION_DATA = 8;
        SESSION_TIME_QUERY = 9;
        SESSION_TIME_DATA = 10;
        LOG_SEND = 12;
        FMD_GET_QUERY = 13;
        FMD_GET_DATA = 14;
        FMD_CREATE_QUERY = 15;
        FMD_CREATE_DOCUMENT_QUERY = 16;
        FMD_CREATE_DATA = 17;
        SESSION_MASTER_QUERY = 18;
        SESSION_MASTER_DATA = 19;
        DC_STATUS_QUERY = 20;
        DC_STATUS_DATA = 21;
    }
    
    required MESSAGE_TYPE messageType = 1;
}
